--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,17 @@
 </head>
 <body>
 
+<ul>
+<% if user_signed_in? %>
+  <li><a href="<%= destroy_user_session_path %>" data-method=’delete’>Cerrar Sesión</a></li>
+<% else %>
+  <li><a href="<%= new_user_session_path %>"> Log in </a></li>
+  <li><a href="<%= new_user_registration_path %>"> Registrarse </a></li>
+<% end %>
+</ul>
+
+
+
 <%= yield %>
 
 </body>
