--- a/app/views/universities/show.html.erb
+++ b/app/views/universities/show.html.erb
@@ -178,6 +178,30 @@
 <!--  -->
 
 
+    <% @careers.each do |career| %>
+      <tr>
+        <td><%= career.user %></td>
+        <td><%= career.university %></td>
+        <td><%= career.country %></td>
+        <td><%= career.name %></td>
+        <td><%= career.area %></td>
+        <td><%= career.description %></td>
+        <td><%= career.for_who %></td>
+        <td><%= career.duration %></td>
+        <td><%= career.modality %></td>
+        <td><%= career.shift %></td>
+        <td><%= career.email %></td>
+        <td><%= career.website %></td>
+        <td><%= career.facebook %></td>
+        <td><%= career.twitter %></td>
+        <td><%= career.linkedin %></td>
+        <td><%= career.blog %></td>
+        <td><%= career.aprox_cost %></td>
+        <td><%= link_to 'Show', country_university_career_path(@country, @university, career) %></td>
+        <td><%= link_to 'Edit', edit_country_university_career_path(@country,@university,career) %></td>
+        <td><%= link_to 'Destroy', career, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
 
 
 
