--- a/app/views/universities/show.html.erb
+++ b/app/views/universities/show.html.erb
@@ -22,7 +22,8 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @university.name %>
+  
+  <%= best_in_place [@country, @university], :name, :place_holder => "Click me to add content!" %>
 </p>
 
 <p>
