--- a/app/views/universities/_unive_score.html.erb
+++ b/app/views/universities/_unive_score.html.erb
@@ -1,4 +1,7 @@
-<%= form_for [@country,@university, @unive_score] do |f| %>
+<!--  -->
+
+
+<%= form_for [@country,@university, @unive_score], remote:true, :html => {:id => 'review_form'} do |f| %>
   <% if @unive_score.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@unive_score.errors.count, "error") %> prohibited this unive_score from being saved:</h2>
@@ -19,6 +22,6 @@
   </div>
 <% end %>
 
-<h1>Score: <%= @university.average_score %></h1>
+<h1>Unive Score:</h1><h1 id="reviews_count"><%= @university.average_score %></h1>
 
 <!--  -->
