--- a/app/views/universities/show.html.erb
+++ b/app/views/universities/show.html.erb
@@ -151,10 +151,13 @@
   <%= @university.languages %>
 </p>
 
+
+
+
 <!--  -->
 
 
-<%= render 'univescore' %>
+<%= render 'unive_score' %>
 
 <%= render 'academicscore' %>
 
