--- a/app/views/academic_scores/create.js.erb
+++ b/app/views/academic_scores/create.js.erb
@@ -3,6 +3,6 @@
 // page[:review_form].reset
 // page.replace_html :notice, flash[:notice]
 // flash.discard
-$("#reviews_count").html("<%= pluralize(@university.average_score,'') %>");
-$("#review_form")[0].reset();
-$('#myModal').modal('hide');
+$("#academic_reviews_count").html("<%= pluralize(@university.average_academic_score,'') %>");
+$("#academic_review_form")[0].reset();
+$('#AcademicmyModal').modal('hide');
