--- a/app/views/universities/_admissionscore.html.erb
+++ b/app/views/universities/_admissionscore.html.erb
@@ -1,4 +1,16 @@
-<%= form_for [@country,@university, @admission_score] do |f| %>
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#AdmissionmyModal">New Admission Score</button>
+<!--  -->
+<!-- Modal -->
+<div class="modal fade" id="AdmissionmyModal" role="dialog">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Your Admission Score</h4>
+      </div>
+      <div class="modal-body">
+
+<%= form_for [@country,@university, @admission_score], remote:true, :html => {:id => 'admission_review_form'} do |f| %>
   <% if @admission_score.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@admission_score.errors.count, "error") %> prohibited this admission_score from being saved:</h2>
@@ -18,7 +30,12 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
+    </div>
+  </div>
+</div>
 
-<h1>admission_score: <%= @university.average_admission_score %></h1>
+<h1>Admission Score: <span id="admission_reviews_count"><%= @university.average_admission_score %></span></h1>
+
 
 <!--  -->
