--- a/app/views/universities/_alumniscore.html.erb
+++ b/app/views/universities/_alumniscore.html.erb
@@ -1,4 +1,17 @@
-<%= form_for [@country,@university, @alumni_score] do |f| %>
+<!-- Trigger the modal with a button -->
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#AlumnimyModal">New Alumni Score</button>
+<!--  -->
+<!-- Modal -->
+<div class="modal fade" id="AlumnimyModal" role="dialog">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Your Alumni Score</h4>
+      </div>
+      <div class="modal-body">
+
+<%= form_for [@country,@university, @alumni_score], remote: true, :html => {:id => 'alumni_review_form'} do |f| %>
   <% if @alumni_score.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@alumni_score.errors.count, "error") %> prohibited this alumni_score from being saved:</h2>
@@ -18,7 +31,12 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
+    </div>
+  </div>
+</div>
 
-<h1>alumni_score: <%= @university.average_alumni_score %></h1>
+<h1>Alumni Score: <span id="alumni_reviews_count"><%= @university.average_alumni_score %></span></h1>
+
 
 <!--  -->
