--- a/app/views/universities/_graduationscore.html.erb
+++ b/app/views/universities/_graduationscore.html.erb
@@ -1,4 +1,17 @@
-<%= form_for [@country,@university, @graduation_score] do |f| %>
+<!-- Trigger the modal with a button -->
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#GraduationmyModal">New Graduation Score</button>
+<!--  -->
+<!-- Modal -->
+<div class="modal fade" id="GraduationmyModal" role="dialog">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Your Graduation Score</h4>
+      </div>
+      <div class="modal-body">
+
+<%= form_for [@country,@university, @graduation_score], remote: true, :html => {:id => 'graduation_review_form'} do |f| %>
   <% if @graduation_score.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@graduation_score.errors.count, "error") %> prohibited this graduation_score from being saved:</h2>
@@ -18,7 +31,12 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
+    </div>
+  </div>
+</div>
 
-<h1>graduation_score: <%= @university.average_graduation_score %></h1>
+<h1>Graduation Score: <span id="graduation_reviews_count"><%= @university.average_graduation_score %></span></h1>
+
 
 <!--  -->
