--- a/app/views/universities/_infraestructurescore.html.erb
+++ b/app/views/universities/_infraestructurescore.html.erb
@@ -1,4 +1,18 @@
-<%= form_for [@country,@university, @infraestructure_score] do |f| %>
+<!-- Trigger the modal with a button -->
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#InfraestructuremyModal">New Infraestructure Score</button>
+<!--  -->
+<!-- Modal -->
+<div class="modal fade" id="InfraestructuremyModal" role="dialog">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Your Infraestructure Score</h4>
+      </div>
+      <div class="modal-body">
+
+
+<%= form_for [@country,@university, @infraestructure_score], remote: true, :html => {:id => 'infraestructure_review_form'} do |f| %>
   <% if @infraestructure_score.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@infraestructure_score.errors.count, "error") %> prohibited this infraestructure_score from being saved:</h2>
@@ -18,7 +32,12 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
+    </div>
+  </div>
+</div>
 
-<h1>Score: <%= @university.average_infraestructure_score %></h1>
+<h1>Infraestructure Score: <span id="infraestructure_reviews_count"><%= @university.average_infraestructure_score %></span></h1>
+
 
 <!--  -->
