--- a/app/views/universities/_investmentscore.html.erb
+++ b/app/views/universities/_investmentscore.html.erb
@@ -1,4 +1,17 @@
-<%= form_for [@country,@university, @investment_score] do |f| %>
+<!-- Trigger the modal with a button -->
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#InvestmentmyModal">New Investment Score</button>
+<!--  -->
+<!-- Modal -->
+<div class="modal fade" id="InvestmentmyModal" role="dialog">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Your Investment Score</h4>
+      </div>
+      <div class="modal-body">
+
+<%= form_for [@country,@university, @investment_score], remote: true, :html => {:id => 'investment_review_form'} do |f| %>
   <% if @investment_score.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@investment_score.errors.count, "error") %> prohibited this investment_score from being saved:</h2>
@@ -18,7 +31,12 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
+    </div>
+  </div>
+</div>
 
-<h1>investment_score: <%= @university.average_investment_score %></h1>
+<h1>Investment Score: <span id="investment_reviews_count"><%= @university.average_investment_score %></span></h1>
+
 
 <!--  -->
