--- a/app/views/careers/show.html.erb
+++ b/app/views/careers/show.html.erb
@@ -81,6 +81,30 @@
 
 <%= render 'alumni' %>
 
+<!--  -->
+
+<%= render 'universities/unive_score' %>
+
+<%= render 'universities/academicscore' %>
+
+<%= render 'universities/partyscore' %>
+
+<%= render 'universities/satisfactionscore' %>
+
+<%= render 'universities/infraestructurescore' %>
+
+<%= render 'universities/alumniscore' %>
+
+<%= render 'universities/admissionscore' %>
+
+<%= render 'universities/graduationscore' %>
+
+<%= render 'universities/professorscore' %>
+
+<%= render 'universities/investmentscore' %>
+
+<%= render 'universities/finantialscore' %>
+
 
 
 <%= link_to 'Edit', edit_country_university_career_path(@country, @university, @career) %> |
