--- a/app/views/universities/edit.html.erb
+++ b/app/views/universities/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @university %> |
+<%= link_to 'Show', country_universities_path(@country,@university) %> |
 <%= link_to 'Back', country_universities_path %>
