--- a/app/views/graduation_scores/create.js.erb
+++ b/app/views/graduation_scores/create.js.erb
@@ -3,6 +3,14 @@
 // page[:review_form].reset
 // page.replace_html :notice, flash[:notice]
 // flash.discard
+<% if @unive_score.errors.empty? %>
+$('.alert').html("El producto ha sido creado con éxito").show();
+
 $("#graduation_reviews_count").html("<%= pluralize(@university.average_graduation_score,'') %>");
 $("#graduation_review_form")[0].reset();
 $('#GraduationmyModal').modal('hide');
+
+<% else %>
+// show first error
+alert('<%= @unive_score.errors.full_messages[0] %>');
+<% end %>
