--- a/app/views/unive_scores/create.js.erb
+++ b/app/views/unive_scores/create.js.erb
@@ -3,6 +3,12 @@
 // page[:review_form].reset
 // page.replace_html :notice, flash[:notice]
 // flash.discard
+<% if @unive_score.errors.empty? %>
+$('.alert').html("El producto ha sido creado con éxito").show();
 $("#reviews_count").html("<%= pluralize(@university.average_score,'') %>");
 $("#review_form")[0].reset();
 $('#myModal').modal('hide');
+<% else %>
+  // show first error
+  alert('<%= @unive_score.errors.full_messages[0] %>');
+<% end %>
