--- a/app/views/careers/_current_jobs.html.erb
+++ b/app/views/careers/_current_jobs.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@country,@university,@career, @career.current_jobs.new]) do |f| %>
+<%= form_for([@university,@career, @career.current_jobs.new]) do |f| %>
 
 
 
