--- a/app/views/careers/edit.html.erb
+++ b/app/views/careers/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', country_university_career_path(@country, @university, @career) %> |
-<%= link_to 'Back', country_university_path(@country, @university) %>
+<%= link_to 'Show', university_career_path(@university, @career) %> |
+<%= link_to 'Back', university_path(@university) %>
