--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,4 @@
-<% @countries.each do |country| %>
-<% country.universities.each do |university| %>
+<% @universities.each do |university| %>
       <tr>
         <td><%= university.user %></td>
         <td><%= university.country %></td>
@@ -31,9 +30,8 @@
         <td><%= university.sports %></td>
         <td><%= university.cutural %></td>
         <td><%= university.languages %></td>
-        <td><%= link_to 'Show', country_university_path(country, university) %></td>
-        <td><%= link_to 'Edit', edit_country_university_path(country, university) %></td>
-        <td><%= link_to 'Destroy', country_university_path(country, university), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', university_path(university) %></td>
+        <td><%= link_to 'Edit', edit_university_path(university) %></td>
+        <td><%= link_to 'Destroy', university_path(university), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
     <% end %>
