--- a/app/views/careers/_accreditations.html.erb
+++ b/app/views/careers/_accreditations.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@country,@university,@career, @career.accreditations.new]) do |f| %>
+<%= form_for([@university,@career, @career.accreditations.new]) do |f| %>
 
 
 
