--- a/app/views/graduation_scores/create.js.erb
+++ b/app/views/graduation_scores/create.js.erb
@@ -3,7 +3,7 @@
 // page[:review_form].reset
 // page.replace_html :notice, flash[:notice]
 // flash.discard
-<% if @unive_score.errors.empty? %>
+<% if @graduation_score.errors.empty? %>
 $('.alert').html("El producto ha sido creado con éxito").show();
 
 $("#graduation_reviews_count").html("<%= pluralize(@university.average_graduation_score,'') %>");
@@ -12,5 +12,5 @@ $('#GraduationmyModal').modal('hide');
 
 <% else %>
 // show first error
-alert('<%= @unive_score.errors.full_messages[0] %>');
+alert('<%= @graduation_score.errors.full_messages[0] %>');
 <% end %>
