--- a/app/views/party_scores/create.js.erb
+++ b/app/views/party_scores/create.js.erb
@@ -3,7 +3,7 @@
 // page[:review_form].reset
 // page.replace_html :notice, flash[:notice]
 // flash.discard
-<% if @unive_score.errors.empty? %>
+<% if @party_score.errors.empty? %>
 $('.alert').html("El producto ha sido creado con éxito").show();
 
 $("#party_reviews_count").html("<%= pluralize(@university.average_party_score,'') %>");
@@ -11,5 +11,5 @@ $("#party_review_form")[0].reset();
 $('#PartymyModal').modal('hide');
 <% else %>
 // show first error
-alert('<%= @unive_score.errors.full_messages[0] %>');
+alert('<%= @party_score.errors.full_messages[0] %>');
 <% end %>
