--- a/app/views/universities/_admissionscore.html.erb
+++ b/app/views/universities/_admissionscore.html.erb
@@ -10,7 +10,7 @@
       </div>
       <div class="modal-body">
 
-<%= form_for [@country,@university, @admission_score], remote:true, :html => {:id => 'admission_review_form'} do |f| %>
+<%= form_for [@university, @admission_score], remote:true, :html => {:id => 'admission_review_form'} do |f| %>
   <% if @admission_score.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@admission_score.errors.count, "error") %> prohibited this admission_score from being saved:</h2>
