--- a/app/views/universities/_careers.html.erb
+++ b/app/views/universities/_careers.html.erb
@@ -3,7 +3,7 @@
   <tr>
     <td><%= career.user %></td>
     <td><%= career.university %></td>
-    <td><%= career.country %></td>
+    <td><%= career.university.country.name %></td>
     <td><%= career.name %></td>
     <td><%= career.area %></td>
     <td><%= career.description %></td>
@@ -18,8 +18,8 @@
     <td><%= career.linkedin %></td>
     <td><%= career.blog %></td>
     <td><%= career.aprox_cost %></td>
-    <td><%= link_to 'Show', country_university_career_path(@country, @university, career) %></td>
-    <td><%= link_to 'Edit', edit_country_university_career_path(@country,@university,career) %></td>
+    <td><%= link_to 'Show', university_career_path(@university, career) %></td>
+    <td><%= link_to 'Edit', edit_university_career_path(@university,career) %></td>
     <td><%= link_to 'Destroy', career, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
