--- a/app/views/universities/_finantialscore.html.erb
+++ b/app/views/universities/_finantialscore.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="modal-body">
 
-<%= form_for [@country,@university, @finantial_score], remote: true, :html => {:id => 'finantial_review_form'} do |f| %>
+<%= form_for [@university, @finantial_score], remote: true, :html => {:id => 'finantial_review_form'} do |f| %>
   <% if @finantial_score.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@finantial_score.errors.count, "error") %> prohibited this finantial_score from being saved:</h2>
