--- a/app/views/universities/_form.html.erb
+++ b/app/views/universities/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@country, @university] do |f| %>
+<%= form_for [@university] do |f| %>
   <% if @university.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@university.errors.count, "error") %> prohibited this university from being saved:</h2>
@@ -10,6 +10,11 @@
       </ul>
     </div>
   <% end %>
+
+<div class="field">
+  <%= f.label :Country_id %><br>
+  <%= collection_select(:university, :country_id, Country.all, :id, :name, {:prompt => 'Select Country'}) %>
+</div>
 
   <div class="field">
     <%= f.label :option %><br>
