--- a/app/views/universities/_graduationscore.html.erb
+++ b/app/views/universities/_graduationscore.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="modal-body">
 
-<%= form_for [@country,@university, @graduation_score], remote: true, :html => {:id => 'graduation_review_form'} do |f| %>
+<%= form_for [@university, @graduation_score], remote: true, :html => {:id => 'graduation_review_form'} do |f| %>
   <% if @graduation_score.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@graduation_score.errors.count, "error") %> prohibited this graduation_score from being saved:</h2>
