--- a/app/views/universities/_professorscore.html.erb
+++ b/app/views/universities/_professorscore.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="modal-body">
 
-<%= form_for [@country,@university, @professor_score], remote: true, :html => {:id => 'professor_review_form'} do |f| %>
+<%= form_for [@university, @professor_score], remote: true, :html => {:id => 'professor_review_form'} do |f| %>
   <% if @professor_score.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@professor_score.errors.count, "error") %> prohibited this professor_score from being saved:</h2>
