--- a/app/views/universities/index.html.erb
+++ b/app/views/universities/index.html.erb
@@ -1,85 +1,31 @@
-<p id="notice"><%= notice %></p>
+<%= search_form_for @q, remote: true, id: 'my_search' do |f| %>
+  <%= f.label :Search_cont %>
+  <%= f.search_field :name_or_country_name_or_careers_name_cont %>
 
-<h1>Listing Universities</h1>
+  <%= f.label :Mexico %>
+  <%= f.check_box :country_id, :value => 'Mexico', :id => 'MexicoP' %>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Country</th>
-      <th>Option</th>
-      <th>Private or public</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Fundation</th>
-      <th>Rector</th>
-      <th>Email</th>
-      <th>Facebook</th>
-      <th>Twitter</th>
-      <th>Linkedin</th>
-      <th>Website</th>
-      <th>Link admission</th>
-      <th>Address</th>
-      <th>Longitude</th>
-      <th>Latitude</th>
-      <th>Logo</th>
-      <th>Many proffesors</th>
-      <th>Many students</th>
-      <th>Is wifi</th>
-      <th>Is cafe</th>
-      <th>Is safe</th>
-      <th>Is libray</th>
-      <th>Is job help</th>
-      <th>Is student exchange</th>
-      <th>Is spiritual</th>
-      <th>Sports</th>
-      <th>Cutural</th>
-      <th>Languages</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <%#= f.select :country_id_eq, options_from_collection_for_select(Country.all, "id", "name"), include_blank: true %>
 
-  <tbody>
-    <% @universities.each do |university| %>
-      <tr>
-        <td><%= university.user %></td>
-        <td><%= university.country %></td>
-        <td><%= university.option %></td>
-        <td><%= university.private_or_public %></td>
-        <td><%= university.name %></td>
-        <td><%= university.description %></td>
-        <td><%= university.fundation %></td>
-        <td><%= university.rector %></td>
-        <td><%= university.email %></td>
-        <td><%= university.facebook %></td>
-        <td><%= university.twitter %></td>
-        <td><%= university.linkedin %></td>
-        <td><%= university.website %></td>
-        <td><%= university.link_admission %></td>
-        <td><%= university.address %></td>
-        <td><%= university.longitude %></td>
-        <td><%= university.latitude %></td>
-        <td><%= university.logo %></td>
-        <td><%= university.many_proffesors %></td>
-        <td><%= university.many_students %></td>
-        <td><%= university.is_wifi %></td>
-        <td><%= university.is_cafe %></td>
-        <td><%= university.is_safe %></td>
-        <td><%= university.is_libray %></td>
-        <td><%= university.is_job_help %></td>
-        <td><%= university.is_student_exchange %></td>
-        <td><%= university.is_spiritual %></td>
-        <td><%= university.sports %></td>
-        <td><%= university.cutural %></td>
-        <td><%= university.languages %></td>
-        <td><%= link_to 'Show', university_path( university) %></td>
-        <td><%= link_to 'Edit', edit_university_path( university) %></td>
-        <td><%= link_to 'Destroy', university_path( university), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+
+  <%= f.check_box :is_wifi_true %>
+  <%= f.label :is_wifi_true %>
+
+  <%#= f.submit "search" %>
+<% end %>
+
+<%= content_tag :table do %>
+  <%= content_tag :th, sort_link(@q, :name) %>
+  <%= content_tag :th, sort_link(@q, :country_name) %>
+  <%= content_tag :th, sort_link(@q, :careers_name) %>
+<% end %>
+
+<div id="results">
+    <%= render 'results' %>
+</div>
 
 <br>
 
 <%= link_to 'New University', new_university_path %>
+
+
