--- a/app/views/universities/index.html.erb
+++ b/app/views/universities/index.html.erb
@@ -3,12 +3,13 @@
   <%= f.search_field :name_or_country_name_or_careers_name_cont %>
 
   <%= f.label :Mexico %>
-  <%= f.check_box :country_id, :value => 'Mexico', :id => 'MexicoP' %>
+  <%= f.check_box :country_id_eq, :value => 'Mexico', :id => 'MexicoP' %>
 
     <%#= f.select :country_id_eq, options_from_collection_for_select(Country.all, "id", "name"), include_blank: true %>
 
-  <%= f.label :is_wifi_true %>
-  <%= f.check_box :is_wifi_true %>
+  <%= f.label :Wifi %>
+  <%= f.check_box :is_wifi_eq, :value => true, :id => 'Wifi' %>
+
   
 
   <%#= f.submit "search" %>
